Use docker testing

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,15 +6,18 @@ galaxy_info:
   description: Installs and configures redis on Debian/Ubuntu linux servers.
   company: ambimax® GmbH
   license: MIT
-  min_ansible_version: 2.1
+  role_name: redis
+  min_ansible_version: 2.5
   platforms:
   - name: Debian
     versions:
     - jessie
+    - stretch
   - name: Ubuntu
     versions:
-    - precise
     - trusty
+    - xenial
+    - bionic
   galaxy_tags:
     - ubuntu
     - debian
